--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <li class="personagem selecionado" id="ray" data-name="Rachel" data-description="Ela foi oferecida como um sacrifício para os floor masters do B6 ao B1.">
                     <img src="src/imagens/card-ray.jpg" alt="Personagem Rachel" >
                 </li>
-                <li class="personagem" id="Zack" data-name="Zack" data-description="Mestre do andar B6, busca matar Rachel.">
-                    <img src="src/imagens/card-Zack.jpg" alt="Personagem Zack">
+                <li class="personagem" id="zack" data-name="Zack" data-description="Mestre do andar B6, busca matar Rachel.">
+                    <img src="src/imagens/card-Zack.jpg" alt="Personagem zack">
                 </li>
                 <li class="personagem" id="danny" data-name="Danny"data-description="Mestre do B5 e terrapeuta de Rachel, quer os seus olhos.">
                     <img src="src/imagens/card-Danny.jpg" alt="Personagem Danny">
@@ -41,7 +41,7 @@
                 <li class="personagem" id="grey" data-name="Grey" data-description="Floor master do B2, quer saber qual é a 'essência' da Rachel.">
                     <img src="src/imagens/card-grey.jpg" alt="Personagem Grey">
                 </li>
-                <li class="personagem" id="Cathy" data-name="Cathy" data-description="Floor master do B3, quer torturar Rachel">
+                <li class="personagem" id="cathy" data-name="Cathy" data-description="Floor master do B3, quer torturar Rachel">
                     <img src="src/imagens/card-cathy.jpg" alt="Personagem Cathy">
                 </li>
                 
